--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,17 @@
-<p>
-  about works!
-</p>
+<div class="container row">
+  <h1>Aout</h1>
+</div>
+<hr />
+<div class="about-container row container">
+  <div class="col-md-1"></div>
+  <div class="col-md-10">
+    <h3>About Us </h3>
+    <p>Lorem Ipsum</p>
+    <h3>How We Work</h3>
+    <p>Lorem Ipsum</p>
+    <h3>Contact Us</h3>
+    <p>Lorem Ipsum</p>
+    <h3>Privacy Policy</h3>
+    <p>Lorem Ipsum</p>
+  </div>
+</div>
