--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
       </div>
       <div class="add-component-container">
         <input type="text" class="form-control" [(ngModel)]="title" placeholder="Type Title">
-        <input type="text" class="form-control" [(ngModel)]="title" placeholder="Type Url">
+        <input type="text" class="form-control" [(ngModel)]="url" placeholder="Type Url">
         <div class="col-md-10 offset-md-1">
           <button class="btn btn-primary" (click)="add(title, url)">Add Link</button>
         </div>
